--- a/trastevere-back/.env
+++ b/trastevere-back/.env
@@ -1,6 +1,7 @@
 PORT = 3000
 # DATABASE_URL="mysql://root:DrenP0$@192.168.1.101:3306/testdb"
-DATABASE_URL="mysql://root:rootpassword@localhost:3307/testdb"
+# DATABASE_URL="mysql://root:rootpassword@localhost:3307/testdb"
+DATABASE_URL="postgres://postgres.oqdshcomjzokantxhiaw:HwBJlTSuyATzZWlM@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
 
 EXPIRES_IN = "1d"
 SECRET = "`f*Nr>i^~/O4jhSTULr%jTmbR]H!<2~!tv6T[qw{hDiO8Wq\4D"
