--- a/trastevere-back/package.json
+++ b/trastevere-back/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && cp -r ./global ./dist && npx prisma generate",
+    "build": "nest build && cp -r ./global ./dist && npx prisma generate && npx prisma migrate prod",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
